--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -423,7 +423,7 @@ function ejecutar(){
           }
       }
 
-      alert('http://localhost:8000/tipocarga/'+tipocarga+'/periodo/'+periodo+'/periodo_ini/'+periodo_ini+'/periodo_fin/'+periodo_fin+'/fuente/'+fuente+'/itemvolumen/'+itemvolumen+'/categoria/'+categoria);
+      //alert('http://localhost:8000/tipocarga/'+tipocarga+'/periodo/'+periodo+'/periodo_ini/'+periodo_ini+'/periodo_fin/'+periodo_fin+'/fuente/'+fuente+'/itemvolumen/'+itemvolumen+'/categoria/'+categoria);
 
       $.ajax({
             url: 'http://localhost:8000/tipocarga/'+tipocarga+'/periodo/'+periodo+'/periodo_ini/'+periodo_ini+'/periodo_fin/'+periodo_fin+'/fuente/'+fuente+'/itemvolumen/'+itemvolumen+'/categoria/'+categoria,
